# rust-cli-setter

./: Cargo.toml  README.md
src/: app.rs  cli.rs  error.rs  main.rs
src/commands/: mod.rs
