[package]
name = "cli-starter"
version = "0.1.1"
edition = "2021"
authors = ["Morshedul Islam <morshedulmunna1@gmail.com>"]
description = "A CLI application starter template"
license = "MIT"
repository = "https://github.com/Execute-Soft/rust-cli-setter"
readme = "README.md"

[dependencies]
# CLI argument parsing
clap = { version = "4.5", features = ["derive"] }

# Terminal colors and styling
colored = "2.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
env_logger = "0.10"
log = "0.4"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Optional: For configuration files
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
toml = { version = "0.8", optional = true }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"

[[bin]]
name = "cli-starter"
path = "src/main.rs"
